Add support for service pause and resume
